# cairui-tobias-bachelor-project

./: LICENSE  README.md  dqn.pth  metabolism_2nd.py  metabolism_main.py  pp_sb3.py  simple_RL_sim.ipynb  tianshou_basics.ipynb
Fluid/: Explicit MacCormack Scheme .ipynb  Explicit MacCormack Scheme 1.ipynb  Lamb modes.ipynb  Lamb_modes_2.ipynb  NEWLamb_modes_2.ipynb  Plot_Velocity_field.ipynb  Real-Time Fluid Dynamics for Games.ipynb  Stable fluid.ipynb  SympyCas.ipynb  SympyCas2.ipynb  Test_BEM.ipynb  Untitled.ipynb  associated_legendre_polynomials.py  bem.py  bem_no_condition.py  bem_nobc.py  bem_two_objects.py  boundary_element_method.py  cd feltplot.ipynb  cd_velocity_fields_plots.ipynb  field_velocity.py  fluid_module.py  lamb_modes.ipynb  n_sphere.py  numerical_accurary.py  old_code.py  plot_velocity_fields.py  power_consumption.ipynb  power_consumption.py  power_factor.py  spherical_harmonics.py
Fluid_old/: NEWLamb_modes_2.ipynb  Stable fluid.ipynb  Test_BEM.ipynb  lamb_modes.ipynb  n_sphere_test.py  old_code.py
MIA/: Skin lesion.ipynb  SkinLesionTraining_GroundTruth.csv
Materiale/: links.txt
Reinforcement Learning/predator_prey_fluid/: LICENSE  README.md  pyproject.toml  setup.py
Reinforcement Learning/predator_prey_fluid/predator_prey_fluid/: __init__.py
Reinforcement Learning/predator_prey_fluid/predator_prey_fluid/envs/: __init__.py  pp_tianshou_fra_bunden.py  predator_prey_sb3.py  predator_prey_sb3_array.py  predator_prey_tianshou.py  test_file.py  versions.py
Reinforcement Learning/predator_prey_fluid/predator_prey_fluid/wrappers/: __init__.py
(+556 files in other folders)
