[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predator_prey_fluid"
version = "0.0.1"
authors = [
	{name = "Tobias", email="cwr879@alumni.ku.dk"},
]
description = "Predator Prey RL simulation environment"
readme = "README.md"
requires-python = ">=3.7"
classifiers =[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
